--- a/Step01/01_출력.html
+++ b/Step01/01_출력.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>document</title>
   <script>
+    document.write("Hello World<br>");
     document.write("Hello World");
-    document.write("Hello World");
+    document.write("<h1>제목영역</h1>");
+    console.log("로그 1");
+    console.log("로그 2");
   </script>
 </head>
 <body>
