--- a/Step02/04_calerandar.html
+++ b/Step02/04_calerandar.html
@@ -21,8 +21,27 @@
     let line = (endDate.getTime() - startDate.getTime()) / (7 * 24 * 60 * 60 * 1000);
 
     //테이블 요일까지 태그 생성
-    let tag = '';
+    let tag = `<h2>${today.getMonth()+1}월</h2>`;
+    tag += '<table><tr><th>일</th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th><th>토</th></tr>';
+    //달력을 조립하는 반복문 
+    
+    tag += "</table>";
+    document.write(tag);
   </script>
+  <style>
+    h2{
+      text-align: center;
+    }
+    table{
+      border-collapse: collapse;
+    }
+    td,th{
+      width: 150px;
+      border: 1px solid black;
+      text-align: center;
+      padding: 5px 0px;
+    }
+  </style>
 </head>
 <body>
   
