--- a/Step02/04_calerandar.html
+++ b/Step02/04_calerandar.html
@@ -27,7 +27,17 @@
     for(i=0;i<line;i++){
       tag += '<tr>';
       for(j=0;j<7;j++){
-        tag += `<td>${startDate.getDate()}</td>`;
+        let className = '';
+
+        if(startDate.getMonth() != today.getMonth()){
+          className = 'disable';
+        }else if(startDate.getDay() == 0){
+          className = 'sun';
+        }else if(startDate.getDay() == 6){
+          className = 'sat';
+        }
+
+        tag += `<td class='${className}'>${startDate.getDate()}</td>`;
         startDate.setDate(startDate.getDate()+1);//날짜 증가
       }
       tag += '</tr>';
@@ -52,6 +62,15 @@
       height: 150px;
       vertical-align: top;
       text-align: right;
+    }
+    .sun{
+      color:red;
+    }
+    .sat{
+      color:blue;
+    }
+    .disable{
+      color:gray;
     }
   </style>
 </head>
