--- a/Step03/08_pc_page.html
+++ b/Step03/08_pc_page.html
@@ -8,6 +8,13 @@
   <script>
     //접속한 기기를 판단을 해서
     //안드로이드, 아이폰, 아이패드 이면 모바일 페이지(mobile_page.html)로 이동
+    //location, navigator, toLowerCase, indexOf
+    let info = navigator.userAgent.toLowerCase();
+    let r = info.indexOf('android') + info.indexOf('iphone') + info.indexOf('ipad');
+    if(r != -3){
+      alert('모바일로 접속하셨습니다. 모바일 페이지로 이동합니다.');
+      location.href = 'mobile_page.html';
+    }
   </script>
 </head>
 <body>
