--- a/Step04/13_dropdown_menu.html
+++ b/Step04/13_dropdown_menu.html
@@ -53,6 +53,7 @@
         flex-direction: row;
         height: 0px;
         overflow: hidden;
+        transition: 1s all;
       }
     </style>
     <script>
