--- a/Step04/15_accodion.html
+++ b/Step04/15_accodion.html
@@ -36,6 +36,33 @@
         #btn_close:active{
             background-color: white;
         }
+        th,td {
+            padding:10px;
+        }
+        th{
+            background-color: #e9e9e9;
+        }
+        td:first-child{
+            width: 5%;
+            text-align: center;
+        }
+        td:last-child{
+            width: 10%;
+            text-align: center;
+        }
+        tbody > tr:nth-child(2n){
+            background-color: #2d1355;
+            color: white;
+        }
+        tbody > tr:nth-child(2n+1){
+            background-color: #0c021b;
+            color: white;
+        }
+        div.content{
+            height: 0px;
+            overflow: hidden;
+            transition: 0.5s all;
+        }
     </style>
     <script>
        
