--- a/Step04/15_accodion.html
+++ b/Step04/15_accodion.html
@@ -72,7 +72,7 @@
             let content = document.querySelectorAll('.content');
             
             //각 제목 부분에 클릭 이벤트 등록
-            for(i=0;i<title.length;i++){
+            for(let i=0;i<title.length;i++){
                 content[i].style.height = '0px';
                 title[i].onclick = () => {
                     console.log(i);
@@ -85,6 +85,11 @@
             }
             //close 버튼 선택
             //모든 내용 부분의 세로 길이를 0px로 지정
+            document.querySelector("#btn_close").onclick = () => {
+                for(let i=0;i<content.length;i++){
+                    content[i].style.height = '0px';
+                }
+            }
        }
     </script>
 </head>
