--- a/Step04/15_accodion_ex.html
+++ b/Step04/15_accodion_ex.html
@@ -72,17 +72,17 @@
             let content = Array.from(document.querySelectorAll('.content'));
             
             //각 제목 부분에 클릭 이벤트 등록
-            for(let i=0;i<title.length;i++){
-                content[i].style.height = '0px';
-                title[i].onclick = () => {
-                    console.log(i);
-                    if(content[i].style.height == '0px'){
-                        content[i].style.height = content[i].scrollHeight + "px";
+            title.map((item, idx) => {
+                content[idx].style.height = '0px';
+                title[idx].onclick = () => {
+                    console.log(idx);
+                    if(content[idx].style.height == '0px'){
+                        content[idx].style.height = content[idx].scrollHeight + "px";
                     }else{
-                        content[i].style.height = "0px";
+                        content[idx].style.height = "0px";
                     }
                 }
-            }
+            });
             //close 버튼 선택
             //모든 내용 부분의 세로 길이를 0px로 지정
             document.querySelector("#btn_close").onclick = () => {
