--- a/Step04/21_register_quest.html
+++ b/Step04/21_register_quest.html
@@ -32,6 +32,68 @@
             padding-left: 40px;
             color: gray;
         }
+        label{
+            font-weight: bold;
+        }
+        .border_bottom{
+            border-bottom: 2px solid #c4c4c4;
+        }
+        input{
+            border:none;
+            outline: none;
+            height: 50px;
+            width: 80%;
+            font-size: 20px;
+        }
+        .sub_txt{
+            width: 20%;
+            font-size: 20px;
+            font-weight: bold;
+            box-sizing: border-box;
+            text-align: right;
+            color: gray;
+            display: inline-block;
+        }
+        #gcode{
+            width:100px;
+            height: 50px;
+            box-sizing: border-box;
+            border:none;
+            font-size: 20px;
+            outline: none;
+            border-right: 1px solid #c4c4c4;
+        }
+        .btn_send_no{
+            width: 250px;
+            height: 50px;
+            background-color: white;
+            border:1px solid #c4c4c4;
+            border-radius: 25px;
+        }
+        .btn_send_no:hover{
+            background-color: #d4d4d4;
+        } 
+        .btn_send_no:active{
+            background-color: white;
+        }
+        .btn_next{
+            width:100%;
+            height: 50px;
+            background-color: #d4d4d4;
+            border-radius: 10px;
+            border:none;
+        }
+        .btn_next:hover{
+            background-color: #ffe606;
+        }
+        .true{
+            color:blue;
+            font-weight: bold;
+        }
+        .false{
+            color:red;
+            font-weight: bold;
+        }
     </style>
     <script>
        
