--- a/Step05/04_jquery_selector_id.html
+++ b/Step05/04_jquery_selector_id.html
@@ -7,7 +7,16 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-      
+        $(()=>{
+            //버튼 태그 선택
+            $("button").click(function(){
+                //아이디와 암호에 입력된 값을 읽어와서 콘솔에다가 출력
+                console.log($("#id").val(), $("#password").val());
+                //아이디와 암호 값을 result 영역에 출력
+                //innerHTML 대체하는 함수 : html()
+                $("#result").html($("#id").val() + " " + $("#password").val());
+            });
+        });
     </script>
 </head>
 <body>
