--- a/Step05/07_jquery_selector_2.html
+++ b/Step05/07_jquery_selector_2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,43 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-        $(function(){
-          
+        $(function () {
+            //선택한 요소의 동생요소 선택
+            //클래스가 txt 다음 위치에 있는 p 태그를 선택, 배경색을 노랑색으로 변경
+            //$('.txt + p').css('background-color','yellow');
+            $('.txt').next().css('background-color', 'yellow');
+            $('.txt').next().next().css('background-color', 'green');
+            //선택한 요소의 형요소 선택
+            $('.txt').prev().css('background-color', 'pink');
+            $('.txt').prev().prev().css('background-color', 'skyblue');
+
+            //선택한 요소의 모든 동생요소 선택
+            $('.tit').nextAll().css('color', 'blue');
+            //선택한 요소의 모든 형요소 선택
+            $('.tit').prevAll().css('color', 'green');
+            //선택한 요소를 제외한 모든 형제들을 선택
+            $('.tit').siblings().css('text-decoration', 'underline');
+
         });
     </script>
 </head>
+
 <body>
     <div id="wrap">
-		<h1>인접 관계 선택자</h1>
-		<p>내용1</p>
-		<p class="txt">내용2</p>
-		<p>내용3</p>
-		<p>내용4</p>
-	</div>
+        <h1>인접 관계 선택자</h1>
+        <p>내용1</p>
+        <p class="txt">내용2</p>
+        <p>내용3</p>
+        <p>내용4</p>
+    </div>
     <hr>
     <div>
-		<h1>인접 관계 선택자</h1>
-		<p>내용1</p>
-		<p class="tit">내용2</p>
-		<p>내용3</p>
-		<p>내용4</p>
-	</div>
+        <h1>인접 관계 선택자</h1>
+        <p>내용1</p>
+        <p class="tit">내용2</p>
+        <p>내용3</p>
+        <p>내용4</p>
+    </div>
 </body>
+
 </html>
