--- a/Step05/12_jquery_selector_7.html
+++ b/Step05/12_jquery_selector_7.html
@@ -7,7 +7,14 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-     
+        $(function(){
+            // 인덱스 번호가 2인 요소를 선택
+            $('ul li').eq(2).css('background-color','orange');//무리별 X, 선택된 것 전체 기준
+            // 인덱스 번호가 2보다 큰 요소를 선택
+            $('ul li:gt(2)').css('color','red');
+            // 인덱스 번호가 2보다 작은 요소를 선택
+            $('ul li:lt(2)').css('color','blue');
+        })
     </script>
 </head>
 <body>
