--- a/Step05/14_jquery_selector_attr.html
+++ b/Step05/14_jquery_selector_attr.html
@@ -7,7 +7,20 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-      
+      $(function(){
+            //속성 선택자
+            //해당 속성이 있는 경우
+            $('a[download]').css('background-color','coral');
+            //일치하는 속성값이 있는 경우
+            $('a[target=_blank]').css('background-color','yellow');
+            //시작하는 속성값
+            $('a[href^=http]').css('text-decoration','none');
+            //포함하는 속성값
+            $('a[href*=lib]').css('border','1px solid red');
+            //끝나는 속성값
+            $('a[href$=jpg]').css('color','red');
+
+      });
     </script>
 </head>
 <body>
