--- a/Step06/08_jquery_append_prepend.html
+++ b/Step06/08_jquery_append_prepend.html
@@ -8,7 +8,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-          
+            //해당 선택자에 마지막 자식요소로 추가
+            $('ul').append('<li>마지막 요소 추가 - 1</li>');
+            $('ul').append('<li>마지막 요소 추가 - 2</li>');
+            $('ul').append('<li>마지막 요소 추가 - 3</li>');
+            $('<li>마지막 요소 추가 - 4</li>').appendTo('ul');
+            $('<li>마지막 요소 추가 - 5</li>').appendTo('ul');
+
+            //해당 선택자에 첫번째 자식요소로 추가
+            $('ul').prepend('<li>첫번쨰 요소 추가 - 1</li>');
+            $('ul').prepend('<li>첫번쨰 요소 추가 - 2</li>');
+            $('ul').prepend('<li>첫번쨰 요소 추가 - 3</li>');
+            $('<li>첫번쨰 요소 추가 - 4</li>').prependTo('ul');
+            $('<li>첫번쨰 요소 추가 - 5</li>').prependTo('ul');
         });
     </script>
 </head>
