--- a/Step06/09_jquery_after_before.html
+++ b/Step06/09_jquery_after_before.html
@@ -8,7 +8,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-          
+          //동생요소 추가
+          $("#child").after('<li>after - 1</li>');
+          $("#child").after('<li>after - 2</li>');
+          $("#child").after('<li>after - 3</li>');
+          $('<li>after - 4</li>').insertAfter($('#child'));
+
+          //형요소 추가
+          $("#child").before('<li>before - 1</li>');
+          $("#child").before('<li>before - 2</li>');
+          $("#child").before('<li>before - 3</li>');
+          $('<li>before - 4</li>').insertBefore($('#child'));
         });
     </script>
 </head>
