--- a/Step06/10_jquery_each.html
+++ b/Step06/10_jquery_each.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,23 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-        $(function(){
-           
+        $(function () {
+            $("#ul1 li").each(function (idx, obj) {
+                console.log(`${idx} - ${$(obj).html()}`);
+            });
+            $("#ul1 li").each(function (idx) {
+                console.log(`${idx} - ${$(this).html()}`);
+            });
+            //#ul2에 있는 li 들 중 짝수 번째에 해당하는 자식들에게 글자색을 빨강
+            $("#ul2 li").each(function (idx) {
+                if((idx + 1) % 2 == 0){
+                    $(this).css("color","red");
+                }
+            });
         });
     </script>
 </head>
+
 <body>
     <ul id="ul1">
         <li>메뉴1-1</li>
@@ -19,13 +32,14 @@
         <li>메뉴1-3</li>
         <li>메뉴1-4</li>
         <li>메뉴1-5</li>
-    </ul>  
-	<ul id="ul2">
+    </ul>
+    <ul id="ul2">
         <li>메뉴2-1</li>
         <li>메뉴2-2</li>
         <li>메뉴2-3</li>
         <li>메뉴2-4</li>
         <li>메뉴2-5</li>
-    </ul> 
+    </ul>
 </body>
+
 </html>
