--- a/Step06/11_jquery_event_1.html
+++ b/Step06/11_jquery_event_1.html
@@ -19,7 +19,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function () {
-        
+            //마우스가 #box1에 올라갔을때 배경색을 빨강
+            $("#box1").mouseover(function () {
+                $(this).css("background-color", "red");
+            });
+            //마우스가 #box1에 벗어났을때 배경색을 제거
+            $("#box1").mouseout(function () {
+                $(this).css("background", "none");
+            });
+            //#box2를 클릭을 할 때마다 배경색을 랜덤하게 바꿈
+            $("#box2").click(function(){
+                let r = Math.floor(Math.random() * 256);
+                let g = Math.floor(Math.random() * 256);
+                let b = Math.floor(Math.random() * 256);
+                $(this).css("background-color",`rgb(${r},${g},${b})`);
+            });
         });
     </script>
 </head>
