--- a/Step06/13_jquery_event_3.html
+++ b/Step06/13_jquery_event_3.html
@@ -8,8 +8,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-          
-
+            //로그인 버튼을 눌러서 submit 이벤트가 실행시
+            //아이디와 비밀번호 중 하나라도 입력이 안되면
+            //submit 이벤트를 중단하는 기능 작성
+            $('#frm').submit(function(e){
+                let flag = false;
+                $('input').each(function(){
+                    if($(this).val().length == 0)
+                        flag = true;
+                });
+                if(flag)
+                    e.preventDefault();
+            });
          
         });
     </script>
