이벤트 처리

--- a/Step06/15_jquery_register.html
+++ b/Step06/15_jquery_register.html
@@ -101,7 +101,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-    
+        //자바스크립트로 했던 예제를 가져와서 jquery로 변경
 
     </script>
 </head>
