--- a/Step07/01_hide_show.html
+++ b/Step07/01_hide_show.html
@@ -9,7 +9,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-            
+            $("#hide").click(function(){
+                $('img').stop().hide(1000,function(){
+                    console.log("hide 종료");
+                });
+            });
+            $("#show").click(function(){
+                $('img').stop().show(1000,function(){
+                    console.log("show 종료");
+                });
+            });
+            $("#toggle").click(function(){
+                $('img').stop().toggle(1000,function(){
+                    console.log("toggle 종료");
+                });
+            });
         });
     </script>
 </head>
