--- a/Step07/03_slide.html
+++ b/Step07/03_slide.html
@@ -14,7 +14,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-           
+           $("#slideUp").click(function () { 
+                $("img").slideUp(1000); 
+           });
+           $("#slideDown").click(function () { 
+                $("img").slideDown(1000); 
+           });
+           $("#slideToggle").click(function () { 
+                $("img").slideToggle(1000); 
+           });
         });
     </script>
 </head>
