--- a/Step07/05_dropdown_menu.html
+++ b/Step07/05_dropdown_menu.html
@@ -59,7 +59,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-            
+            $('#sub_menu_container').slideUp(0);
+            $("nav").mouseenter(function () { 
+                $('#sub_menu_container').stop().slideDown(500);
+            });
+            $("nav").mouseleave(function () { 
+                $('#sub_menu_container').stop().slideUp(500);
+            });
         });
 
     </script>
