이벤트 처리

--- a/Step07/08_popup.html
+++ b/Step07/08_popup.html
@@ -41,7 +41,9 @@
     <script>
       
         $(function(){
-           
+           $('.container a').click(function (e) { 
+                $(this).parent().hide(0);
+           });
         });
     </script>
 </head>
