--- a/Step07/09_tab.html
+++ b/Step07/09_tab.html
@@ -13,7 +13,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-          
+            $('a').click(function (e) { 
+                //bar 버튼 클릭한것만 select 클래스 적용
+                $(this).addClass('select').siblings().removeClass('select');
+                //bar 버튼 클릭한 인덱스 번호에 해당하는 p 태그에 active 클래스 적용
+                $('p').eq($(this).index()).addClass('active').siblings().removeClass('active');
+            });
         });
     </script>
     <style>
