--- a/Step07/10_accodion.html
+++ b/Step07/10_accodion.html
@@ -41,7 +41,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(function(){
-           
+           $('h2').click(function (e) {
+                $('h2').not($(this)).removeClass('select'); 
+                $(this).addClass('select').next().slideDown(500);
+                $('p').not($(this).next()).slideUp(500);            
+           });
         });
     </script>
 </head> 
